update the title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: Stuart Chen's Blog
 SEOTitle: Stuart Chen | Blog Yeah
 header-img: img/post-bg-desk.jpg
 email: chen.jiazheng.stuart@foxmail.com
