--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Stuart",
     "author": "Stuart <chenjiazhengfr@126.com>",
     "version": "1.7.0",
-    "homepage": "http://stuartchan.github.io",
+    "homepage": "https://stuartchan.github.io",
     "repository": {
         "type": "git",
         "url": "https://github.com/StuartCHAN/StuartCHAN.github.io"
