--- a/_config.yml
+++ b/_config.yml
@@ -62,11 +62,11 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  clientID: e33be506a01bfc3d88c4                            #生成的clientID
+  clientSecret: 567338a08cfc0064084b90ff5edda80d84052598    #生成的clientSecret
+  repo: stuartchan.github.io    #仓库名称
+  owner: stuartchan    #github用户名
+  admin: stuartchan
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
